--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "xun_xian_wei_shi package.json",
     "scripts": {
-        "start": " gulp sass && concurrently  \"lite-server\" \"gulp sass:watch\" "
+        "start": " gulp sass && concurrently  \"lite-server\" \"gulp sass:watch\" ",
+        "all": "gulp all"
     },
     "keywords": [],
     "author": "jas group",
@@ -13,7 +14,11 @@
         "concurrently": "^3.1.0",
         "gulp": "^3.9.1",
         "gulp-sass": "^3.1.0",
-        "lite-server": "^2.2.2"
+        "lite-server": "^2.2.2",
+        "gulp-imagemin": "^3.1.1",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-minify-html": "^1.0.6",
+        "gulp-uglify": "^2.1.0"
     },
     "repository": {}
 }
